# 1

./: .gitignore  README.md  RECOVERY_NOTES.md  pyproject.toml
app/: __init__.py  cli.py  config.py
app/asset_catalog/: __init__.py  catalog.py  models.py  naming.py  reference_selector.py  search.py  service.py
app/db/: __init__.py  base.py  engine.py  models.py  session.py
app/feishu_sync/: __init__.py  client.py  models.py  service.py
app/jimeng_operator/: __init__.py  gemini_audit.py  models.py  selectors.py  service.py  web_operator.py
app/openclaw/: __init__.py  client.py  models.py  service.py  skills.py
app/orchestrator/: __init__.py  service.py
app/prompt_cache/: __init__.py  models.py  service.py
app/script_splitter/: __init__.py  models.py  service.py
app/video_analyzer/: __init__.py  analyze.py  models.py  service.py
assets/: catalog.json
docs/: openclaw-local-setup.md
examples/: manju_scene_batch.template.json
openclaw-ui/: app.js  index.html  styles.css
scripts/: manju_one_shot.py  openclaw-ui.ps1  openclaw-wsl.sh  openclaw.ps1  openclaw_control_server.py  restore_feishu_base_assets.py  run_manju_batch_from_anchor.py  transcribe_precise.py
tests/: test_asset_catalog.py  test_asset_catalog_bom.py  test_cli.py  test_config_separation.py  test_db.py  test_feishu_sync.py  test_jimeng_cli.py  test_jimeng_operator.py  test_manju_cli_options.py  test_openclaw_cli.py  test_openclaw_skills.py  test_orchestrator.py  test_reference_selector.py  test_script_splitter.py  test_services_import.py  test_video_analyzer.py
(+5 files in other folders)
