[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-agent-system"
version = "0.1.0"
description = "素材同步、提示词生成、即梦自动化和视频分析工作流。"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.0",
  "playwright>=1.40",
  "sqlmodel>=0.0.16",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
packages = ["app"]
